--- a/code/compute_node_metrics.ipynb
+++ b/code/compute_node_metrics.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/code/func/')\n",
+    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/code/func/')\n",
     "from proj_environment import set_proj_env\n",
     "from func import node_strength, ave_control, modal_control"
    ]
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude'"
       ]
      },
      "execution_count": 5,
@@ -136,45 +136,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1100, 1601)\n"
+      "(1100, 1201)\n"
      ]
     }
    ],
    "source": [
     "# output dataframe\n",
-    "ct_labels = ['ct_' + str(i) for i in range(num_parcels)]\n",
     "str_labels = ['str_' + str(i) for i in range(num_parcels)]\n",
     "ac_labels = ['ac_' + str(i) for i in range(num_parcels)]\n",
     "mc_labels = ['mc_' + str(i) for i in range(num_parcels)]\n",
     "\n",
-    "df_node = pd.DataFrame(index = df.index, columns = ct_labels + str_labels + ac_labels + mc_labels)\n",
+    "df_node = pd.DataFrame(index = df.index, columns = str_labels + ac_labels + mc_labels)\n",
     "df_node.insert(0, train_test_str, df[train_test_str])\n",
     "\n",
     "print(df_node.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load in cortical thickness"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "CT = np.zeros((df.shape[0], num_parcels))\n",
-    "\n",
-    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
-    "    full_path = glob.glob(os.path.join(os.environ['CTDIR'], str(index[0]), '*' + str(index[1]), os.environ['CT_FILE_NAME']))[0]\n",
-    "    \n",
-    "    ct = np.loadtxt(full_path)\n",
-    "    CT[i,:] = ct\n",
-    "    \n",
-    "df_node.loc[:,ct_labels] = CT"
    ]
   },
   {
@@ -186,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +229,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
