--- a/code/prepare_normative.ipynb
+++ b/code/prepare_normative.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/code/func/')\n",
+    "sys.path.append('/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/code/func/')\n",
     "from proj_environment import set_proj_env\n",
     "from func import get_synth_cov"
    ]
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n",
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n",
+      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "(1100, 21)\n",
-      "(1100, 1601)\n"
+      "(1100, 1201)\n"
      ]
     }
    ],
@@ -395,15 +395,15 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th>squeakycleanExclude</th>\n",
-       "      <th>ct_0</th>\n",
-       "      <th>ct_1</th>\n",
-       "      <th>ct_2</th>\n",
-       "      <th>ct_3</th>\n",
-       "      <th>ct_4</th>\n",
-       "      <th>ct_5</th>\n",
-       "      <th>ct_6</th>\n",
-       "      <th>ct_7</th>\n",
-       "      <th>ct_8</th>\n",
+       "      <th>str_0</th>\n",
+       "      <th>str_1</th>\n",
+       "      <th>str_2</th>\n",
+       "      <th>str_3</th>\n",
+       "      <th>str_4</th>\n",
+       "      <th>str_5</th>\n",
+       "      <th>str_6</th>\n",
+       "      <th>str_7</th>\n",
+       "      <th>str_8</th>\n",
        "      <th>...</th>\n",
        "      <th>mc_390</th>\n",
        "      <th>mc_391</th>\n",
@@ -447,166 +447,166 @@
        "      <th>81287</th>\n",
        "      <th>2738</th>\n",
        "      <td>0</td>\n",
-       "      <td>-0.387087</td>\n",
-       "      <td>0.004407</td>\n",
-       "      <td>-0.267396</td>\n",
-       "      <td>-0.028519</td>\n",
-       "      <td>-0.339460</td>\n",
-       "      <td>-0.222917</td>\n",
-       "      <td>-0.555840</td>\n",
-       "      <td>-0.554495</td>\n",
-       "      <td>-0.403831</td>\n",
+       "      <td>164.386767</td>\n",
+       "      <td>246.367003</td>\n",
+       "      <td>795.191576</td>\n",
+       "      <td>269.120880</td>\n",
+       "      <td>895.847259</td>\n",
+       "      <td>192.570815</td>\n",
+       "      <td>523.061296</td>\n",
+       "      <td>438.329546</td>\n",
+       "      <td>45.894958</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.029287</td>\n",
-       "      <td>0.010829</td>\n",
-       "      <td>-0.003852</td>\n",
-       "      <td>0.019600</td>\n",
-       "      <td>0.006431</td>\n",
-       "      <td>0.016437</td>\n",
-       "      <td>0.000043</td>\n",
-       "      <td>0.013576</td>\n",
-       "      <td>0.002063</td>\n",
-       "      <td>0.015741</td>\n",
+       "      <td>0.012413</td>\n",
+       "      <td>0.000886</td>\n",
+       "      <td>-0.002483</td>\n",
+       "      <td>0.006866</td>\n",
+       "      <td>0.002628</td>\n",
+       "      <td>0.007157</td>\n",
+       "      <td>-0.000492</td>\n",
+       "      <td>0.005387</td>\n",
+       "      <td>-0.000391</td>\n",
+       "      <td>0.008519</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80680</th>\n",
        "      <th>2739</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.234626</td>\n",
-       "      <td>-0.224065</td>\n",
-       "      <td>-0.170527</td>\n",
-       "      <td>-0.193183</td>\n",
-       "      <td>0.282391</td>\n",
-       "      <td>-0.087519</td>\n",
-       "      <td>0.163466</td>\n",
-       "      <td>0.131132</td>\n",
-       "      <td>0.250391</td>\n",
+       "      <td>-478.686604</td>\n",
+       "      <td>203.494026</td>\n",
+       "      <td>-685.852778</td>\n",
+       "      <td>-459.873519</td>\n",
+       "      <td>-224.641315</td>\n",
+       "      <td>-514.160739</td>\n",
+       "      <td>-322.791988</td>\n",
+       "      <td>-308.973052</td>\n",
+       "      <td>-491.574503</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.033283</td>\n",
-       "      <td>-0.028287</td>\n",
-       "      <td>0.004943</td>\n",
-       "      <td>0.002286</td>\n",
-       "      <td>-0.000051</td>\n",
-       "      <td>0.009080</td>\n",
-       "      <td>-0.002439</td>\n",
-       "      <td>-0.016799</td>\n",
-       "      <td>0.000636</td>\n",
-       "      <td>0.011507</td>\n",
+       "      <td>0.014177</td>\n",
+       "      <td>-0.017266</td>\n",
+       "      <td>0.001698</td>\n",
+       "      <td>-0.002390</td>\n",
+       "      <td>-0.001257</td>\n",
+       "      <td>0.001404</td>\n",
+       "      <td>-0.001196</td>\n",
+       "      <td>-0.008045</td>\n",
+       "      <td>-0.001181</td>\n",
+       "      <td>0.003843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81754</th>\n",
        "      <th>2740</th>\n",
        "      <td>1</td>\n",
-       "      <td>0.031087</td>\n",
-       "      <td>0.452194</td>\n",
-       "      <td>0.682236</td>\n",
-       "      <td>0.294448</td>\n",
-       "      <td>0.417452</td>\n",
-       "      <td>0.303948</td>\n",
-       "      <td>0.855036</td>\n",
-       "      <td>-0.007639</td>\n",
-       "      <td>0.199695</td>\n",
+       "      <td>271.847261</td>\n",
+       "      <td>544.748735</td>\n",
+       "      <td>546.553188</td>\n",
+       "      <td>1036.452018</td>\n",
+       "      <td>453.349159</td>\n",
+       "      <td>-1.174756</td>\n",
+       "      <td>-306.521987</td>\n",
+       "      <td>769.827258</td>\n",
+       "      <td>195.380388</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.031682</td>\n",
-       "      <td>0.051293</td>\n",
-       "      <td>0.006959</td>\n",
-       "      <td>0.041199</td>\n",
-       "      <td>0.009133</td>\n",
-       "      <td>0.021211</td>\n",
-       "      <td>0.002054</td>\n",
-       "      <td>0.015383</td>\n",
-       "      <td>0.007908</td>\n",
-       "      <td>0.010865</td>\n",
+       "      <td>0.014422</td>\n",
+       "      <td>0.030086</td>\n",
+       "      <td>0.003718</td>\n",
+       "      <td>0.023136</td>\n",
+       "      <td>0.005041</td>\n",
+       "      <td>0.011835</td>\n",
+       "      <td>0.000846</td>\n",
+       "      <td>0.007005</td>\n",
+       "      <td>0.003669</td>\n",
+       "      <td>0.004956</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81903</th>\n",
        "      <th>2749</th>\n",
        "      <td>0</td>\n",
-       "      <td>0.035996</td>\n",
-       "      <td>-0.045988</td>\n",
-       "      <td>0.318626</td>\n",
-       "      <td>-0.063466</td>\n",
-       "      <td>-0.001922</td>\n",
-       "      <td>0.035968</td>\n",
-       "      <td>-0.422805</td>\n",
-       "      <td>0.314472</td>\n",
-       "      <td>0.362054</td>\n",
+       "      <td>-427.359229</td>\n",
+       "      <td>147.970848</td>\n",
+       "      <td>1141.739417</td>\n",
+       "      <td>1235.601650</td>\n",
+       "      <td>-771.097793</td>\n",
+       "      <td>-562.441720</td>\n",
+       "      <td>-940.212554</td>\n",
+       "      <td>-461.209301</td>\n",
+       "      <td>-337.792420</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.010152</td>\n",
-       "      <td>0.022177</td>\n",
-       "      <td>0.005587</td>\n",
-       "      <td>0.032746</td>\n",
-       "      <td>0.005475</td>\n",
-       "      <td>0.013376</td>\n",
-       "      <td>0.001784</td>\n",
-       "      <td>0.018394</td>\n",
-       "      <td>0.008128</td>\n",
-       "      <td>0.005626</td>\n",
+       "      <td>0.000712</td>\n",
+       "      <td>0.007283</td>\n",
+       "      <td>0.002677</td>\n",
+       "      <td>0.015023</td>\n",
+       "      <td>0.002268</td>\n",
+       "      <td>0.005603</td>\n",
+       "      <td>0.000714</td>\n",
+       "      <td>0.009685</td>\n",
+       "      <td>0.004048</td>\n",
+       "      <td>0.001435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81043</th>\n",
        "      <th>2750</th>\n",
        "      <td>0</td>\n",
-       "      <td>-0.444289</td>\n",
-       "      <td>-0.525050</td>\n",
-       "      <td>0.189272</td>\n",
-       "      <td>-0.571304</td>\n",
-       "      <td>-0.086752</td>\n",
-       "      <td>-0.360070</td>\n",
-       "      <td>-0.725818</td>\n",
-       "      <td>0.813983</td>\n",
-       "      <td>0.604498</td>\n",
+       "      <td>42.301015</td>\n",
+       "      <td>340.852735</td>\n",
+       "      <td>-761.780545</td>\n",
+       "      <td>-411.173910</td>\n",
+       "      <td>720.605330</td>\n",
+       "      <td>857.229493</td>\n",
+       "      <td>1229.725362</td>\n",
+       "      <td>197.856636</td>\n",
+       "      <td>900.866939</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.051749</td>\n",
-       "      <td>0.033476</td>\n",
-       "      <td>-0.000507</td>\n",
-       "      <td>-0.022667</td>\n",
-       "      <td>0.002194</td>\n",
-       "      <td>0.002912</td>\n",
-       "      <td>-0.002322</td>\n",
-       "      <td>0.015815</td>\n",
-       "      <td>-0.000447</td>\n",
-       "      <td>0.006430</td>\n",
+       "      <td>-0.024198</td>\n",
+       "      <td>0.015385</td>\n",
+       "      <td>-0.001047</td>\n",
+       "      <td>-0.013582</td>\n",
+       "      <td>0.000234</td>\n",
+       "      <td>-0.001096</td>\n",
+       "      <td>-0.001402</td>\n",
+       "      <td>0.007871</td>\n",
+       "      <td>-0.001617</td>\n",
+       "      <td>0.002233</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 1601 columns</p>\n",
+       "<p>5 rows × 1201 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              squeakycleanExclude      ct_0      ct_1      ct_2      ct_3  \\\n",
-       "bblid scanid                                                                \n",
-       "81287 2738                      0 -0.387087  0.004407 -0.267396 -0.028519   \n",
-       "80680 2739                      1  0.234626 -0.224065 -0.170527 -0.193183   \n",
-       "81754 2740                      1  0.031087  0.452194  0.682236  0.294448   \n",
-       "81903 2749                      0  0.035996 -0.045988  0.318626 -0.063466   \n",
-       "81043 2750                      0 -0.444289 -0.525050  0.189272 -0.571304   \n",
+       "              squeakycleanExclude       str_0       str_1        str_2  \\\n",
+       "bblid scanid                                                             \n",
+       "81287 2738                      0  164.386767  246.367003   795.191576   \n",
+       "80680 2739                      1 -478.686604  203.494026  -685.852778   \n",
+       "81754 2740                      1  271.847261  544.748735   546.553188   \n",
+       "81903 2749                      0 -427.359229  147.970848  1141.739417   \n",
+       "81043 2750                      0   42.301015  340.852735  -761.780545   \n",
        "\n",
-       "                  ct_4      ct_5      ct_6      ct_7      ct_8  ...    mc_390  \\\n",
-       "bblid scanid                                                    ...             \n",
-       "81287 2738   -0.339460 -0.222917 -0.555840 -0.554495 -0.403831  ...  0.029287   \n",
-       "80680 2739    0.282391 -0.087519  0.163466  0.131132  0.250391  ...  0.033283   \n",
-       "81754 2740    0.417452  0.303948  0.855036 -0.007639  0.199695  ...  0.031682   \n",
-       "81903 2749   -0.001922  0.035968 -0.422805  0.314472  0.362054  ...  0.010152   \n",
-       "81043 2750   -0.086752 -0.360070 -0.725818  0.813983  0.604498  ... -0.051749   \n",
+       "                    str_3       str_4       str_5        str_6       str_7  \\\n",
+       "bblid scanid                                                                 \n",
+       "81287 2738     269.120880  895.847259  192.570815   523.061296  438.329546   \n",
+       "80680 2739    -459.873519 -224.641315 -514.160739  -322.791988 -308.973052   \n",
+       "81754 2740    1036.452018  453.349159   -1.174756  -306.521987  769.827258   \n",
+       "81903 2749    1235.601650 -771.097793 -562.441720  -940.212554 -461.209301   \n",
+       "81043 2750    -411.173910  720.605330  857.229493  1229.725362  197.856636   \n",
        "\n",
-       "                mc_391    mc_392    mc_393    mc_394    mc_395    mc_396  \\\n",
-       "bblid scanid                                                               \n",
-       "81287 2738    0.010829 -0.003852  0.019600  0.006431  0.016437  0.000043   \n",
-       "80680 2739   -0.028287  0.004943  0.002286 -0.000051  0.009080 -0.002439   \n",
-       "81754 2740    0.051293  0.006959  0.041199  0.009133  0.021211  0.002054   \n",
-       "81903 2749    0.022177  0.005587  0.032746  0.005475  0.013376  0.001784   \n",
-       "81043 2750    0.033476 -0.000507 -0.022667  0.002194  0.002912 -0.002322   \n",
+       "                   str_8  ...    mc_390    mc_391    mc_392    mc_393  \\\n",
+       "bblid scanid              ...                                           \n",
+       "81287 2738     45.894958  ...  0.012413  0.000886 -0.002483  0.006866   \n",
+       "80680 2739   -491.574503  ...  0.014177 -0.017266  0.001698 -0.002390   \n",
+       "81754 2740    195.380388  ...  0.014422  0.030086  0.003718  0.023136   \n",
+       "81903 2749   -337.792420  ...  0.000712  0.007283  0.002677  0.015023   \n",
+       "81043 2750    900.866939  ... -0.024198  0.015385 -0.001047 -0.013582   \n",
        "\n",
-       "                mc_397    mc_398    mc_399  \n",
-       "bblid scanid                                \n",
-       "81287 2738    0.013576  0.002063  0.015741  \n",
-       "80680 2739   -0.016799  0.000636  0.011507  \n",
-       "81754 2740    0.015383  0.007908  0.010865  \n",
-       "81903 2749    0.018394  0.008128  0.005626  \n",
-       "81043 2750    0.015815 -0.000447  0.006430  \n",
+       "                mc_394    mc_395    mc_396    mc_397    mc_398    mc_399  \n",
+       "bblid scanid                                                              \n",
+       "81287 2738    0.002628  0.007157 -0.000492  0.005387 -0.000391  0.008519  \n",
+       "80680 2739   -0.001257  0.001404 -0.001196 -0.008045 -0.001181  0.003843  \n",
+       "81754 2740    0.005041  0.011835  0.000846  0.007005  0.003669  0.004956  \n",
+       "81903 2749    0.002268  0.005603  0.000714  0.009685  0.004048  0.001435  \n",
+       "81043 2750    0.000234 -0.001096 -0.001402  0.007871 -0.001617  0.002233  \n",
        "\n",
-       "[5 rows x 1601 columns]"
+       "[5 rows x 1201 columns]"
       ]
      },
      "execution_count": 7,
@@ -674,7 +674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount/ageAtScan1_Years+sex_adj/\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount/ageAtScan1_Years+sex_adj/\n"
      ]
     }
    ],
@@ -694,7 +694,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1600 features written out for normative modeling\n"
+      "1200 features written out for normative modeling\n"
      ]
     }
    ],
