Initial commit of data extraction, cleaning, and normative modelling in new environment for project.

--- a/code/compute_node_metrics.ipynb
+++ b/code/compute_node_metrics.ipynb
@@ -16,7 +16,8 @@
     "import os, sys, glob\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy.io as sio"
+    "import scipy.io as sio\n",
+    "import nibabel as nib"
    ]
   },
   {
@@ -37,9 +38,9 @@
    "outputs": [],
    "source": [
     "train_test_str = 'squeakycleanExclude'\n",
-    "exclude_str = 't1Exclude' # 't1Exclude' 'fsFinalExclude'\n",
-    "parc_str = 'schaefer' # 'schaefer' 'lausanne'\n",
-    "parc_scale = 400 # 200 400 | 60 125\n",
+    "exclude_str = 't1Exclude'\n",
+    "parc_str = 'schaefer'\n",
+    "parc_scale = 200\n",
     "parcel_names, parcel_loc, drop_parcels, num_parcels, yeo_idx, yeo_labels = set_proj_env(train_test_str = train_test_str, exclude_str = exclude_str,\n",
     "                                                                            parc_str = parc_str, parc_scale = parc_scale)"
    ]
@@ -60,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount\n"
+      "/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount\n"
      ]
     }
    ],
@@ -136,20 +137,122 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1100, 1201)\n"
+      "(1099, 1001)\n"
      ]
     }
    ],
    "source": [
     "# output dataframe\n",
+    "ct_labels = ['ct_' + str(i) for i in range(num_parcels)]\n",
+    "vol_labels = ['vol_' + str(i) for i in range(num_parcels)]\n",
     "str_labels = ['str_' + str(i) for i in range(num_parcels)]\n",
     "ac_labels = ['ac_' + str(i) for i in range(num_parcels)]\n",
     "mc_labels = ['mc_' + str(i) for i in range(num_parcels)]\n",
     "\n",
-    "df_node = pd.DataFrame(index = df.index, columns = str_labels + ac_labels + mc_labels)\n",
+    "df_node = pd.DataFrame(index = df.index, columns = ct_labels + vol_labels + str_labels + ac_labels + mc_labels)\n",
     "df_node.insert(0, train_test_str, df[train_test_str])\n",
     "\n",
     "print(df_node.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load in cortical thickness and volume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/antsCorticalThickness/81287/20100114x2738/ct_schaefer200_17.txt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "CT = np.zeros((df.shape[0], num_parcels))\n",
+    "\n",
+    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
+    "    file_name = os.environ['CT_NAME_TMP'].replace(\"bblid\", str(index[0]))\n",
+    "    file_name = file_name.replace(\"scanid\", str(index[1]))\n",
+    "    full_path = glob.glob(os.path.join(os.environ['CTDIR'], file_name))\n",
+    "    if i == 0: print(full_path)    \n",
+    "\n",
+    "    ct = np.loadtxt(full_path[0])\n",
+    "    CT[i,:] = ct\n",
+    "    \n",
+    "df_node.loc[:,ct_labels] = CT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subject filter\n",
+    "subj_filt = np.zeros((df.shape[0],)).astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/gm_vol_masks_native/81287/20100114x2738/Schaefer2018_200_17Networks_native_gm.nii.gz']\n"
+     ]
+    }
+   ],
+   "source": [
+    "VOL = np.zeros((df.shape[0], num_parcels))\n",
+    "\n",
+    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
+    "    file_name = os.environ['VOL_NAME_TMP'].replace(\"bblid\", str(index[0]))\n",
+    "    file_name = file_name.replace(\"scanid\", str(index[1]))\n",
+    "    full_path = glob.glob(os.path.join(os.environ['VOLDIR'], file_name))\n",
+    "    if i == 0: print(full_path)    \n",
+    "    \n",
+    "    img = nib.load(full_path[0])\n",
+    "    v = np.array(img.dataobj)\n",
+    "    v = v[v != 0]\n",
+    "    unique_elements, counts_elements = np.unique(v, return_counts=True)\n",
+    "    if len(unique_elements) == num_parcels:\n",
+    "        VOL[i,:] = counts_elements\n",
+    "    else:\n",
+    "        print(str(index) + '. Warning: not all parcels present')\n",
+    "        subj_filt[i] = True\n",
+    "    \n",
+    "df_node.loc[:,vol_labels] = VOL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(subj_filt)"
    ]
   },
   {
@@ -161,9 +264,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# subject filter\n",
+    "subj_filt = np.zeros((df.shape[0],)).astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/lindenmp/Dropbox/Work/ResData/PNC/processedData/diffusion/deterministic_20171118/81287/20100114x2738/tractography/connectivity/81287_20100114x2738_SchaeferPNC_200_dti_streamlineCount_connectivity.mat']\n",
+      "82051/*x2856/tractography/connectivity/82051_*x2856_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "87804/*x3144/tractography/connectivity/87804_*x3144_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "91332/*x3362/tractography/connectivity/91332_*x3362_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "87990/*x3676/tractography/connectivity/87990_*x3676_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "103737/*x3964/tractography/connectivity/103737_*x3964_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "87470/*x4000/tractography/connectivity/87470_*x4000_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "104161/*x4104/tractography/connectivity/104161_*x4104_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "103768/*x4499/tractography/connectivity/103768_*x4499_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "113216/*x4506/tractography/connectivity/113216_*x4506_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "90050/*x4746/tractography/connectivity/90050_*x4746_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "115276/*x5012/tractography/connectivity/115276_*x5012_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "116618/*x5274/tractography/connectivity/116618_*x5274_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "127128/*x5545/tractography/connectivity/127128_*x5545_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "112802/*x6401/tractography/connectivity/112802_*x6401_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "85397/*x6643/tractography/connectivity/85397_*x6643_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "83632/*x6818/tractography/connectivity/83632_*x6818_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "81533/*x6869/tractography/connectivity/81533_*x6869_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "91025/*x6881/tractography/connectivity/91025_*x6881_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n",
+      "105272/*x8238/tractography/connectivity/105272_*x8238_SchaeferPNC_200_dti_streamlineCount_connectivity.mat: NOT FOUND\n"
+     ]
+    }
+   ],
    "source": [
     "# fc stored as 3d matrix, subjects of 3rd dim\n",
     "A = np.zeros((num_parcels, num_parcels, df.shape[0]))\n",
@@ -171,32 +311,12 @@
     "AC = np.zeros((df.shape[0], num_parcels))\n",
     "MC = np.zeros((df.shape[0], num_parcels))\n",
     "\n",
-    "# subject filter\n",
-    "subj_filt = np.zeros((df.shape[0],)).astype(bool)\n",
-    "\n",
     "for (i, (index, row)) in enumerate(df.iterrows()):\n",
-    "    if parc_str == 'lausanne':\n",
-    "        file_name = os.environ['SC_NAME_TMP'].replace(\"scanid\", str(index[1]))\n",
-    "        full_path = os.path.join(os.environ['SCDIR'], file_name)\n",
-    "        try:\n",
-    "            mat_contents = sio.loadmat(full_path)\n",
-    "            a = mat_contents[os.environ['CONN_STR']]\n",
-    "\n",
-    "            A[:,:,i] = a\n",
-    "            S[i,:] = node_strength(a)\n",
-    "            AC[i,:] = ave_control(a)\n",
-    "            MC[i,:] = modal_control(a)\n",
-    "        except FileNotFoundError:\n",
-    "            print(file_name + ': NOT FOUND')\n",
-    "            subj_filt[i] = True\n",
-    "            A[:,:,i] = np.full((num_parcels, num_parcels), np.nan)\n",
-    "            S[i,:] = np.full(num_parcels, np.nan)\n",
-    "            AC[i,:] = np.full(num_parcels, np.nan)\n",
-    "            MC[i,:] = np.full(num_parcels, np.nan)\n",
-    "    elif parc_str == 'schaefer':\n",
+    "    if parc_str == 'schaefer':\n",
     "        file_name = os.environ['SC_NAME_TMP'].replace(\"scanid\", str(index[1]))\n",
     "        file_name = file_name.replace(\"bblid\", str(index[0]))\n",
     "        full_path = glob.glob(os.path.join(os.environ['SCDIR'], file_name))\n",
+    "        if i == 0: print(full_path)\n",
     "        if len(full_path) > 0:\n",
     "            mat_contents = sio.loadmat(full_path[0])\n",
     "            a = mat_contents[os.environ['CONN_STR']]\n",
@@ -220,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "19"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,12 +374,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Check if any subjects have disconnected nodes in A matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# subject filter\n",
+    "subj_filt = np.zeros((df.shape[0],)).astype(bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
+    "    if np.any(np.sum(A[:,:,0], axis = 1) == 0):\n",
+    "        print(index)\n",
+    "        subj_filt[i] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(subj_filt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Get streamline count and network density"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,16 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_400_streamlineCount'"
+       "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +501,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
