--- a/code/compute_node_metrics.ipynb
+++ b/code/compute_node_metrics.ipynb
@@ -106,7 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1100, 18)\n"
+      "(1100, 44)\n"
      ]
     }
    ],
@@ -362,12 +362,21 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1080, 1001)\n"
+     ]
+    }
+   ],
    "source": [
     "if any(subj_filt):\n",
     "    A = A[:,:,~subj_filt]\n",
     "    df = df.loc[~subj_filt]\n",
-    "    df_node = df_node.loc[~subj_filt]"
+    "    df_node = df_node.loc[~subj_filt]\n",
+    "print(df_node.shape)"
    ]
   },
   {
@@ -393,9 +402,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for (i, (index, row)) in enumerate(df.iterrows()):\n",
-    "    if np.any(np.sum(A[:,:,0], axis = 1) == 0):\n",
-    "        print(index)\n",
+    "for i in range(A.shape[2]):\n",
+    "    if np.any(np.sum(A[:,:,i], axis = 1) == 0):\n",
     "        subj_filt[i] = True"
    ]
   },
@@ -407,7 +415,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "12"
       ]
      },
      "execution_count": 19,
@@ -420,6 +428,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1068, 1001)\n"
+     ]
+    }
+   ],
+   "source": [
+    "if any(subj_filt):\n",
+    "    A = A[:,:,~subj_filt]\n",
+    "    df = df.loc[~subj_filt]\n",
+    "    df_node = df_node.loc[~subj_filt]\n",
+    "print(df_node.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -428,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +467,8 @@
     "    a = A[:,:,i]\n",
     "    A_c[i] = np.sum(np.triu(a))\n",
     "    A_d[i] = np.count_nonzero(np.triu(a))/((a.shape[0]**2-a.shape[0])/2)\n",
-    "df['streamline_count'] = A_c\n",
-    "df['network_density'] = A_d"
+    "df.loc[:,'streamline_count'] = A_c\n",
+    "df.loc[:,'network_density'] = A_d"
    ]
   },
   {
@@ -451,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +489,7 @@
        "'/Users/lindenmp/Dropbox/Work/ResProjects/NormativeNeuroDev_CrossSec_DWI/analysis/normative/t1Exclude/squeakycleanExclude/schaefer_200_streamlineCount'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,17 +500,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save out\n",
     "np.save(os.path.join(os.environ['MODELDIR'], 'A'), A)\n",
     "df_node.to_csv(os.path.join(os.environ['MODELDIR'], 'df_node_base.csv'))\n",
-    "df.to_csv(os.path.join(os.environ['MODELDIR'], 'df_pheno.csv'))\n",
-    "\n",
-    "if any(subj_filt):\n",
-    "    np.save(os.path.join(os.environ['MODELDIR'], 'subj_filt'), subj_filt)"
+    "df.to_csv(os.path.join(os.environ['MODELDIR'], 'df_pheno.csv'))"
    ]
   }
  ],
